# custom-llm

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: AGENTS.md  smoke.yaml  tiny.yaml
custom_llm/: AGENTS.md  cli.py
custom_llm/data/: AGENTS.md  collate.py  datasets.py  fineweb_edu.py  tinystories.py  tokenizer.py
custom_llm/model/: AGENTS.md  __init__.py  attention.py  checkpoints.py  config.py  generation.py  model.py
custom_llm/teachers/: AGENTS.md  base.py  mock.py
custom_llm/train/: AGENTS.md  distill.py  optim.py  pretrain.py  sft.py  utils.py
examples/: AGENTS.md  prompts.txt  sft.jsonl  tiny.txt
tests/: AGENTS.md  test_cli.py  test_data_and_train.py  test_model.py
